
** Desktop
---
*** The default value for `desktop-buffers-not-to-save' is nil.
This means Desktop will try restoring all buffers, when you restart
your Emacs session.  Also, `desktop-buffers-not-to-save' is only
effective for buffers that have no associated file.  If you want to
exempt buffers that do correspond to files, customize the value of
`desktop-files-not-to-save' instead.

** FIXME mail-user-agent change
This probably affects a lot of documentation.

** FIXME gdb-mi

** Info

*** The new command `Info-virtual-index' bound to "I" displays a menu of
matched topics found in the index.

*** The new command `info-finder' replaces finder.el with a virtual Info
manual that generates an Info file which gives the same information
through a menu structure.

+++
** New connection methods in Tramp.
The new connection methods "rsyncc", "imap" and "imaps" have been
introduced.  On systems which support GVFS-Fuse, Tramp offers also the
new connection methods "dav", "davs", "obex" and "synce".

** nXML mode is now the default for editing XML files.

** VC and related modes

*** When using C-x v v or C-x v i on a unregistered file that is in a
directory not controlled by any VCS, ask the user what VC backend to
use to create a repository, create a new repository and register the
file.

*** FIXME: add info about the new VC functions: vc-root-diff and
vc-root-print-log once they stabilize.

*** The log functions (C-x v l and C-x v L) do not show the full log
by default anymore.  The number of entries shown can be chosen
interactively with a prefix argument, by customizing
vc-log-show-limit.  The log buffer display buttons that can be used
to change the number of entries shown.
RCS, SCCS, CVS and Git do not support this feature.

*** vc-annotate supports annotations through file copies and renames,
it displays the old names for the files and it can show logs/diffs for
the corresponding lines.  Currently only Git and Mercurial take
advantage of this feature.
